added code climate and tabbed the yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,7 @@ script:
   - npm run test -- karma.conf.js
 after_script:
   - cat ./coverage/PhantomJS*/lcov.info | ./node_modules/codeclimate-test-reporter/bin/codeclimate.js
-
+env:
+  global:
+  - secure: RRD71TdSNXZxknkfwxKOBv/ZrK6smAEIOUcaVpjztBH25vSRrMIPxLtUQcE/GW+HPdzWDZCMk4fTtUTnkFwIV+hLEfyeOvJewVjfvJxZ9wdrXpi9O+P/+UjE568u6hLDBx2eC798SiQmlTiW4Rkcg1dT9IfXHK6POaJaU2oPqng=
+  - secure: YftEessNJmz0/sBf2tPfxn+6ZqgZINnKWxCxPrwS8kEcPxqxdvsw/YrIu25E4AeK0Z2JNjVEY/fzIRc6cZe7sU1y0Z4HdcSiAu9Rfyo5+/bzGsZ393wFIx6Nc8AJJNMcdYkTaR21nS9SuJKlHDsw003gjxOmP2qBZhwXuRhC9HU=
