--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,19 @@
 language: node_js
 node_js:
-- '0.10'
+  - '0.10'
 before_install:
-- npm install -g npm
-- npm install -g bower
-- bower install
-- export DISPLAY=:99.0
-- sh -e /etc/init.d/xvfb start
+  - npm install -g npm
+  - npm install -g bower
+  - bower install
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
 script:
-- npm run test-once
+  - npm run test-once
 after_script:
-- cat ./coverage/PhantomJS*/lcov.info | ./node_modules/codeclimate-test-reporter/bin/codeclimate.js
+  - cat ./coverage/PhantomJS*/lcov.info | ./node_modules/codeclimate-test-reporter/bin/codeclimate.js
+after_success:
+  - npm install -g firebase-tools
+  - firebase deploy
 env:
   global:
   - secure: UZ4xG4dfNdUAmHYqiIiZvLARUgmisE+7C/DQPfdxeMkj2E9a1dfEgrFShV4xoQvmoKw5DLBIJxtPFet94OFQZ59Vh292DVPy0n9k/yxMSDYDKb4Yjl6DvCZ/zrjrY09ye8UFWphH3YllupB22scr0pEpt4hmMyNTOUVLIb3wUC4=
