--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "scripts": {
     "test": "./node_modules/karma/bin/karma start",
-    "test-once": "npm run test -- --single-run"
+    "test-once": "npm run test -- --single-run",
+    "deploy": "firebase --email ${FIREBASE_EMAIL} --password ${FIREBASE_PASSWORD} deploy"
   }
 }
