--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   },
   "homepage": "https://github.com/jamesrico/AddressBook",
   "devDependencies": {
+    "browserify": "^8.1.3",
     "chai": "^1.10.0",
     "codeclimate-test-reporter": "0.0.4",
     "install": "^0.1.8",
+    "jade": "^1.9.2",
     "karma": "^0.12.31",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^0.1.7",
@@ -30,6 +32,7 @@
     "karma-phantomjs-launcher": "^0.1.4",
     "mocha": "^2.1.0",
     "mocha-phantomjs": "^3.5.3",
+    "node-sass": "^2.0.0-beta",
     "phantomjs": "^1.9.15"
   },
   "scripts": {
