--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
   ],
   "dependencies": {
     "jquery": "~2.1.3",
-    "lodash": "~3.1.0"
+    "lodash": "~3.1.0",
+    "firebase": "~2.1.2"
   },
   "devDependencies": {
     "chai": "~1.10.0"
