fixed deploy issues

--- a/package.json
+++ b/package.json
@@ -2,9 +2,14 @@
   "name": "AddressBook",
   "version": "1.0.0",
   "description": "Using tests(mocha, chai), api firebase",
-  "main": "../test/index.html",
-  "directories": {
-    "test": "test"
+ "main": "public/index.js",
+  "scripts": {
+    "karma": "./node_modules/karma/bin/karma start",
+    "test": "npm run build && npm run karma",
+    "test-once": "npm run build && npm run karma -- --single-run",
+    "deploy": "firebase --email ${FIREBASE_EMAIL} --password ${FIREBASE_PASSWORD} deploy",
+    "build": "./build.sh",
+    "watch": "./watch.sh"
   },
   "repository": {
     "type": "git",
@@ -18,11 +23,9 @@
   "homepage": "https://github.com/jamesrico/AddressBook",
   "devDependencies": {
     "chai": "^1.10.0",
-    "codeclimate-test-reporter": "0.0.4",
-    "install": "^0.1.8",
+    "jade": "^1.9.2",
     "karma": "^0.12.31",
     "karma-chai": "^0.1.0",
-    "karma-chrome-launcher": "^0.1.7",
     "karma-coverage": "^0.2.7",
     "karma-coveralls": "^0.1.5",
     "karma-firefox-launcher": "^0.1.4",
@@ -30,6 +33,7 @@
     "karma-phantomjs-launcher": "^0.1.4",
     "mocha": "^2.1.0",
     "mocha-phantomjs": "^3.5.3",
+    "node-sass": "^2.0.0-beta",
     "phantomjs": "^1.9.15"
   },
   "scripts": {
@@ -37,3 +41,5 @@
     "test-once": "npm run test -- --single-run"
   }
 }
+
+
