--- a/bower.json
+++ b/bower.json
@@ -4,9 +4,9 @@
   "homepage": "https://github.com/jamesrico/AddressBook",
   "authors": [
     "James Rico <jamesrico089@gmail.com>"
-  ],
+   ],
+  "main": "public/index.html",
   "license": "MIT",
-  "private": true,
   "ignore": [
     "**/.*",
     "node_modules",
@@ -16,9 +16,8 @@
   ],
   "dependencies": {
     "jquery": "~2.1.3",
-    "lodash": "~3.1.0"
-  },
-  "devDependencies": {
-    "chai": "~1.10.0"
+    "lodash": "~3.1.0",
+    "firebase": "~2.1.2",
+    "foundation": "~5.5.1"
   }
 }
