added foundation to the styling

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "AddressBook",
   "version": "1.0.0",
   "description": "Using tests(mocha, chai), api firebase",
- "main": "public/index.js",
+  "main": "public/index.js",
   "scripts": {
     "karma": "./node_modules/karma/bin/karma start",
     "test": "npm run build && npm run karma",
@@ -23,11 +23,6 @@
   "homepage": "https://github.com/jamesrico/AddressBook",
   "devDependencies": {
     "chai": "^1.10.0",
-<<<<<<< HEAD
-=======
-    "codeclimate-test-reporter": "0.0.4",
-    "install": "^0.1.8",
->>>>>>> 31cc518f5e0915d151785b1cacfaddc75e2164b3
     "jade": "^1.9.2",
     "karma": "^0.12.31",
     "karma-chai": "^0.1.0",
@@ -41,14 +36,7 @@
     "node-sass": "^2.0.0-beta",
     "phantomjs": "^1.9.15"
   },
-  "scripts": {
-    "karma": "./node_modules/karma/bin/karma start",
-    "test": "npm run build && npm run karma",
-    "test-once": "npm run test -- --single-run",
-    "deploy": "firebase --email ${FIREBASE_EMAIL} --password ${FIREBASE_PASSWORD} deploy",
-    "build": "./build.sh",
-    "watch": "./watch.sh"
+  "dependencies": {
+    "jquery": "^2.1.3"
   }
 }
-
-
